--- a/html_10.html
+++ b/html_10.html
@@ -6,16 +6,20 @@
     <title>Популяционная динамика</title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\s1.css">
+    <link rel="stylesheet" href="css\s8.css">
 </head>
 
 <body>
     <header>
         <hr>
-        <h1>Перелом кости</h1>
+        <h1><span class="first-letter">П</span>
+        ерелом кости</h1>
         <hr>
     </header>
     <nav>
+        <p>
+            <li><a href="#link">ссылка на источник в сети интернет</a></li>
+        </p>
         <h2>Навигация</h2>
         <hr>
     </nav>
@@ -24,11 +28,12 @@
         
 
         <article>
+            <p><a name="octr"></a></p>
             <header>
                 <h3>Классификация</h3>
             </header>
             <section>
-                <h4>Типы переломов классифицируют по нескольким критериям, это связано с отсутствием единых причин и локализации переломов.</h4>
+                <p>Типы переломов классифицируют по нескольким критериям, это связано с отсутствием единых причин и локализации переломов.</p>
             </section>
             <section>
                 <h4>В современных классификациях выделяют типы переломов в зависимости от следующих признаков:
