--- a/html_10.html
+++ b/html_10.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Популяционная динамика</title>
+    <title>Перелом кости</title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
     <link rel="stylesheet" href="css\s8.css">
